--- a/style.css
+++ b/style.css
@@ -103,3 +103,10 @@ input[type="radio"]:checked {
   background-color: #4318ff;
   border: none;
 }
+input[type="checkbox"]:checked {
+  background-color: #4318ff;
+  border: none;
+}
+.check_box {
+  margin-left: 2px;
+}
