--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: "DM Sans", sans-serif;
+  color: #2b3674;
 }
 
 body {
@@ -33,10 +34,11 @@ i {
 .unit {
   height: 50px;
   width: 92px;
-  border-radius: 15px;
+  border-radius: 19px !important;
   border: 2px solid #b6bbc7;
   color: #2b3674;
   text-align: center;
+  font-weight: 700;
 }
 #exampleColorInput {
   max-width: 100% !important;
